Set background colour of heading

--- a/alexstyle.css
+++ b/alexstyle.css
@@ -42,6 +42,7 @@ body{
     font-size: 30px;
     color: rgb(255, 255, 255);
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    background-color: #fc5185;
 }
 
 #click1{
