--- a/alexstyle.css
+++ b/alexstyle.css
@@ -69,11 +69,12 @@ body{
 }
 
 #heading1{
-    font-size: 30px;
+    font-size: 20px;
     color: #ffffff;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     background-color: #fc5185;
     text-align: center;
+    padding: 4px;
 }
 
 #click1{
@@ -94,4 +95,5 @@ body{
     font-size: 15px;
     color: #ffffff;
     text-align: center;
+    margin: 20px;
 }
