Font change #craigtuts

--- a/alexstyle.css
+++ b/alexstyle.css
@@ -96,4 +96,5 @@ body{
     color: #ffffff;
     text-align: center;
     margin: 20px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
