--- a/alexstyle.css
+++ b/alexstyle.css
@@ -76,7 +76,7 @@ body{
     padding: 4px;
 }
 
-#click1{
+.poemformat{
     font-size:20px;
     font-family: 'Courier New', Courier, monospace;
     text-align: center;
