Added to the css formatting to make span span clearer

--- a/alexstyle.css
+++ b/alexstyle.css
@@ -97,7 +97,7 @@ body{
     font-family: 'Courier New', Courier, monospace;
     text-align: center;
     color: #364f6b;
-
+    background-color: #3fc1c9;
 }
 
 #header{
