--- a/alexstyle.css
+++ b/alexstyle.css
@@ -123,3 +123,15 @@ h1.links{
     margin: 20px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
+
+#NMElogo{
+    width: 500px;
+    margin: 20px; /* Margin added to give clearance around the image and seperates it from the heading*/
+    /*two lines below mean the image resizes with the browser size*/
+    max-width: 100%;
+    height: auto;
+    /*three lines below centre the image*/
+    display: block; /*this tells it to act like brick*/
+    margin-left: auto; /*this tells it to leave as much space left*/
+    margin-right: auto; /*this tells it to leave as much space space, thus centering the image*/
+}
