--- a/alexstyle.css
+++ b/alexstyle.css
@@ -31,9 +31,6 @@ footer, header, hgroup, menu, nav, section {
 body {
 	line-height: 1;
 }
-ol, ul {
-	list-style: none;
-}
 blockquote, q {
 	quotes: none;
 }
@@ -134,4 +131,24 @@ h1.links{
     display: block; /*this tells it to act like brick*/
     margin-left: auto; /*this tells it to leave as much space left*/
     margin-right: auto; /*this tells it to leave as much space space, thus centering the image*/
+}
+
+#list{
+    font-size: 25px;
+    color: #f5f5f5;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    text-align: center;
+    padding: 4px;
+    width: 100%;
+    background-color: #EE3137;
+}
+
+ol{
+    display: table;
+    margin: 0 auto;
+    padding: 5px;
+}
+
+#pete{
+    font-size: 18px;
 }
