--- a/alexstyle.css
+++ b/alexstyle.css
@@ -131,6 +131,17 @@ h1.links{
     margin-left: auto; /*this tells it to leave as much space left*/
     margin-right: auto; /*this tells it to leave as much space space, thus centering the image*/
 }
+
+#nmebutton{
+    text-align: center;
+    background-color: #EE3137;
+    color: #f5f5f5;
+    display: block; /*this tells it to act like brick*/
+    margin-left: auto; /*this tells it to leave as much space left*/
+    margin-right: auto; /*this tells it to leave as much space space, thus centering the image*/
+    margin-top: 10px;
+    padding: 5px;
+}
 /* The bullet points/numbers etc were not displaying, checked the css reset ^ and removed some styling disply code and it works now */
 #list{
     font-size: 25px;
