--- a/alexstyle.css
+++ b/alexstyle.css
@@ -122,7 +122,7 @@ h1.links{
 
 #NMElogo{
     width: 500px;
-    margin: 20px; /* Margin added to give clearance around the image and seperates it from the heading*/
+    margin: 0px; /* Margin added to give clearance around the image and seperates it from the heading*/
     /*two lines below mean the image resizes with the browser size*/
     max-width: 100%;
     height: auto;
@@ -139,7 +139,8 @@ h1.links{
     display: block; /*this tells it to act like brick*/
     margin-left: auto; /*this tells it to leave as much space left*/
     margin-right: auto; /*this tells it to leave as much space space, thus centering the image*/
-    margin-top: 10px;
+    margin-top: 20px;
+    margin-bottom: 10px;
     padding: 5px;
 }
 /* The bullet points/numbers etc were not displaying, checked the css reset ^ and removed some styling disply code and it works now */
@@ -151,6 +152,7 @@ h1.links{
     padding: 4px;
     width: 100%;
     background-color: #EE3137;
+    margin-top: 20px;
 }
 
 ol{
