--- a/alexstyle.css
+++ b/alexstyle.css
@@ -52,6 +52,19 @@ body{
     color: #f5f5f5
 }
 
+.bigheading{
+    padding: 60px;
+    text-align: center;
+    background: #1abc9c;
+    color: #f5f5f5;
+    font-size: 15px;
+}
+
+div h1 span{
+    font-size: 70px;
+    color: #f5f5f5;
+}
+
 #cat1{
     width: 1000px;
     border: #fc5185 10px solid;
@@ -102,7 +115,7 @@ body{
     background-color: #3fc1c9;
 }
 
-h1.links{
+h2.links{
     font-size:20px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     text-align: center;
