--- a/alexstyle.css
+++ b/alexstyle.css
@@ -52,17 +52,13 @@ body{
     color: #f5f5f5
 }
 
-.bigheading{
+#bigheading{
     padding: 60px;
     text-align: center;
-    background: #1abc9c;
+    background-color: #1abc9c;
     color: #f5f5f5;
-    font-size: 15px;
-}
-
-div h1 span{
     font-size: 70px;
-    color: #f5f5f5;
+    transition: 0.3s;
 }
 
 #cat1{
