--- a/alexstyle.css
+++ b/alexstyle.css
@@ -53,12 +53,16 @@ body{
 }
 
 #bigheading{
-    padding: 60px;
+    padding: 40px;
     text-align: center;
     background-color: #1abc9c;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     color: #f5f5f5;
-    font-size: 70px;
+    font-size: 60px;
     transition: 0.3s;
+    position: fixed;
+    width: 100%;
+    top: 0;
 }
 
 #cat1{
