--- a/alexstyle.css
+++ b/alexstyle.css
@@ -58,11 +58,11 @@ body{
     background-color: #1abc9c;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     color: #f5f5f5;
-    font-size: 60px;
+    font-size: 70px;
     transition: 0.3s;
-    position: fixed;
     width: 100%;
     top: 0;
+    position: /*tried a fixed position which works but covers the top of the page and hides some parts */ 
 }
 
 #cat1{
