--- a/alexstyle.css
+++ b/alexstyle.css
@@ -53,7 +53,8 @@ body{
 }
 
 #bigheading{
-    padding: 40px;
+    padding-top: 40px;
+    padding-bottom: 40px;
     text-align: center;
     background-color: #1abc9c;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
@@ -96,7 +97,8 @@ body{
     color: #f5f5f5;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     text-align: center;
-    padding: 4px;
+    padding-top: 4px;
+    padding-bottom: 4px;
     width: 100%;
     background-color: #fc5185;
 }
@@ -119,7 +121,8 @@ h2.links{
     font-size:20px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     text-align: center;
-    padding: 4px;
+    padding-top: 4px;
+    padding-bottom: 4px;
     width: 100%;
     background-color: #364f6b;
     margin-top: 20px;
@@ -162,7 +165,8 @@ h2.links{
     color: #f5f5f5;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     text-align: center;
-    padding: 4px;
+    padding-top: 4px;
+    padding-bottom: 4px;
     width: 100%;
     background-color: #EE3137;
     margin-top: 20px;
@@ -171,9 +175,21 @@ h2.links{
 ol{
     display: table;
     margin: 0 auto;
-    padding: 5px;
+    padding-top: 5px;
+    padding-bottom: 5px;
 }
 
 #pete{
     font-size: 18px;
+}
+
+footer{
+    font-size:10px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    text-align: center;
+    padding-top: 70px;
+    padding-bottom: 70px;
+    background-color: #1abc9c;
+    margin-top: 20px;
+    width: 100%;
 }
