--- a/alexstyle.css
+++ b/alexstyle.css
@@ -184,6 +184,17 @@ ol{
     font-size: 18px;
 }
 
+#page2{
+    font-size: 15px;
+    color: #f5f5f5;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    text-align: center;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    width: 100%;
+    margin-top: 20px;
+}
+
 footer{
     font-size:10px;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
